XWIKI-12170: Add support for generating URLs with nested spaces * TODO: fix existing bugs when page names and spaces contain chars invalid on the FS